--- a/practice/index.html
+++ b/practice/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta name="description" content="Demo HTML & CSS Prjoect">
   <title>Grandma's Famous Cookies</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
   <header>
     <h1>The Best Chocolate Chip Cookies</h1>
-    <p class="subheader">By: Grandma</p>
+    <p class="byline">By: Grandma</p>
     <p class="subheader">Prep Time: 45 Min</p>
     <img src="./img/cookies.jpg">
   </header>
@@ -16,7 +17,7 @@
   <section id="ingredients">
     <h2>Ingredients</h2>
     <ul class="list">
-      <li>1 1/2 cup (3 sticks) softened butter</li>
+      <li class="rule1">1 1/2 cup (3 sticks) softened butter</li>
       <li>1 cup brown sugar</li>
       <li>1 cup granulated sugar</li>
       <li>1 Tbl vanilla instant pudding powder</li>
